/*
 * $Id: ChangeLog,v 1.841 2003/03/16 06:03:24 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-16 07:15 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * tests/mtcomplex.prg
    ! StopThread() is not anymore suitable to kill the monitor thread:
      changed to KillThread()

2003-03-16 06:53 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * vm/codebloc.c
  * vm/garbage.c
  * vm/hvm.c
    ! Important fixes made to various part of the code to avoid potential
      segfaults and deadlocks. The stack locking range has been increased,
      so GC can't take over i.e. returning functions or exiting codeblocks.
  
  * vm/thread.c
    ! Released stack before entering PRG mutex wait. That could cause deadlocks
      with fence idle actived.
  
  * rtl/console.c
    ! changed the order of stack/ hb_outputMutex locks
  
  * rtl/idle.c
    ! removed stack unlocking/locking that were guarding the GC collection. Now
      it is done in GC.
      
  + doc/xhbt_internals.txt
    + Added documentation on the internal programming of hb threads.
    
2003-03-15 20:17 UTC-0300 Walter Negro <anegro@overnet.com.ar>
   * contrib/mysql/mysql.c
     + Add function SQLERRNO() to obtain number of error.
       Code provided by Rui Caridade
   * contrib/mysql/tmysql.prg
     + Add method ErrorNo() to TMySqlQuery class to obtain
       number of error.
       Code provided by Rui Caridade.
     + Add method RecCount() to TMySqlQuery class.
       Code provided by Blue Face.

2003-03-14 14:22 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbvm.h
  * source/vm/errorapi.c
  * source/vm/hvm.c
  * source/vm/mainlgtk.c
  * source/vm/mainpm.c
  * source/vm/mainstd.c
  * source/vm/mainwin.c
    * Reverted recent Fixe to avoid EXIT procedures when quiting due to an Error (Clipper compaatibility).